app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - host: noderedis.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 3000
